examples/test/testpolicy18202.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18202
  namespace: namespace13
spec:
  podSelector:
    matchLabels:
      key19: value13
      key41: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value43
          key34: value35
      podSelector:
        matchLabels:
          key43: value31
          key39: value15
          key27: value22
